# Chimera

./: .gitignore  AGENTS.md  LICENSE  README.md  pnpm-lock.yaml
.agents/fixes/: test-gaps.md
.github/workflows/: ci.yml  release.yml
apps/vuln-api/: AGENTS.md  API-DOCUMENTATION.md  README.md  justfile  project.json  pyproject.toml  security_config.json
apps/vuln-api-hp/: Cargo.toml  README.md
apps/vuln-api-hp/docs/: dockerhub-overview.md
apps/vuln-api/app/: __init__.py  asgi.py  config.py  routing.py
apps/vuln-api/app/blueprints/admin/: routes.py
apps/vuln-api/app/blueprints/auth/: routes.py
apps/vuln-api/app/blueprints/banking/: routes.py
apps/vuln-api/app/blueprints/checkout/: __init__.py  routes.py
apps/vuln-api/app/blueprints/compliance/: __init__.py  routes.py
apps/vuln-api/app/blueprints/diagnostics/: routes.py
apps/vuln-api/app/blueprints/ecommerce/: __init__.py  routes.py
apps/vuln-api/app/blueprints/education/: __init__.py  routes.py
apps/vuln-api/app/blueprints/genai/: __init__.py  routes.py
apps/vuln-api/app/blueprints/healthcare/: __init__.py  routes.py
apps/vuln-api/app/blueprints/ics_ot/: __init__.py  routes.py
apps/vuln-api/app/blueprints/infrastructure/: __init__.py  routes.py
apps/vuln-api/app/blueprints/integrations/: __init__.py  routes.py
apps/vuln-api/app/blueprints/loyalty/: __init__.py  routes.py
apps/vuln-api/app/blueprints/mobile/: __init__.py  routes.py
apps/vuln-api/app/blueprints/payments/: __init__.py  routes.py
apps/vuln-api/app/blueprints/saas/: __init__.py  routes.py
apps/vuln-api/app/blueprints/security_ops/: __init__.py  routes.py
apps/vuln-api/app/blueprints/testing/: routes.py
apps/vuln-api/app/blueprints/throughput/: routes.py
apps/vuln-api/app/models/: dal.py  data_stores.py
apps/vuln-api/app/services/: apparatus_service.py
apps/vuln-api/app/utils/: hotpatch.py  responses.py  security_config.py  vuln_registry.py
apps/vuln-api/docs/: openapi.yaml
apps/vuln-api/scripts/: check_openapi_drift.py  flask_to_starlette.py  prune_openapi_drift.py
apps/vuln-api/tests/: README.md  conftest.py
apps/vuln-api/tests/unit/: test_admin_routes.py  test_auth_helpers.py  test_checkout_routes.py  test_compliance_routes.py  test_education_routes.py  test_energy_utilities_routes.py  test_genai_routes.py  test_government_routes.py  test_hotpatch.py  test_ics_ot_routes.py  test_infrastructure_routes.py  test_integrations_routes.py  test_loyalty_routes.py  test_migrated_flask_compat_routes.py  test_mobile_routes.py  test_payments_routes.py  test_routing.py  test_saas_routes.py  test_security_ops_routes.py  test_telecom_routes.py
apps/vuln-web/: index.html  package.json  tailwind.config.js
backlog/: config.yml
backlog/docs/: doc-1 - Educational-Roadmap.md
backlog/milestones/: m-0 - educational-remediation-sandbox.md  m-1 - educational-payload-journey.md  m-2 - educational-narrative-missions.md  m-3 - educational-contextual-learning.md  m-4 - educational-defensive-layers-control.md  m-5 - apparatus-integration-foundation.md
backlog/tasks/: task-1 - Repair-local-dev-startup-targets-for-API-and-web.md  (+18 more)
docs/: CNAME  developer-guide.md  dockerhub-overview.md  endpoints-catalog.md  robots.txt
docs/_layouts/: home.html
(+42 files in other folders)
