[package]
name = "chimera-api-hp"
version = "0.1.1"
edition = "2021"
description = "High-performance echo server for WAF throughput testing"
authors = ["Nicholas Crew Ferguson"]
repository = "https://github.com/atlas-crew/Chimera"
homepage = "https://chimera.atlascrew.dev"
documentation = "https://chimera.atlascrew.dev"
readme = "README.md"
keywords = ["security", "performance-testing", "vulnerable-app", "echo-server", "load-testing"]
categories = ["development-tools::testing", "web-programming::http-server"]
license = "MIT"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
axum = "0.8"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
