[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chimera-api"
version = "0.1.0"
description = "Flask demo API application for resilience testing"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "Flask==3.0.0",
    "Flask-SQLAlchemy==3.1.1",
    "Werkzeug==3.0.1",
    "gunicorn==21.2.0",
    "gevent>=24.2.1",
    "PyJWT==2.8.0",
    "flasgger>=0.9.7.1",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
]

[project.scripts]
chimera-api = "app.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.wheel.force-include]
"app/web_dist" = "app/web_dist"
